--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -13,7 +13,7 @@
                 <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Movie Title<i class="material-icons right">more_vert</i></span>
                 <p>
-                    <a href="#">Love❤️ </a>
+                    <button onclick="addToList()" type="button" name="button" id="addButton">Love❤️</button>
                     <a href="#">Not a fan🚫</a>
                 </p>
                 </div>
