--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,15 +2,14 @@
     <h3 class="card-header">Sign Up</h3>
     <form id="signup-form" class="card-body">
         <label for="username-signup" class="form-label">Username</label>
-        <input id="username-signup" type="text" class="form-input" />
+        <input id="username-signup" type="text" autocomplete="username" class="form-input" />
 
 
         <label class="form-label" for="password-signup">Password</label>
-        <input  id="password-signup" type="password" class="form-input" />
+        <input  id="password-signup" type="password" autocomplete="new-password" class="form-input" />
 
         <button type="submit" class="btn">Create Account</button>
-        <a class="login-link" href="/login">Login</a>
+        <a class="login-link" href="/login">Or Login</a>
     </form>
 </div>
-
 <script src="/javascript/signup.js"></script>
