changed list name, added list template

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         <li>
             {{#if loggedIn}}
             <a href="/ToT" class="navbar-item is-hoverable pt-1">This or That</a>
-            <a href="/likeList">My List</a>
+            <a href="/lists">My Lists</a>
             <button id="logout" class="button is-danger">Logout</button>
             {{else}}
             <a href="/login">Sign In</a>
