used validator and linked background img

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
     <h3 class="card-header">Sign Up</h3>
     <form id="signup-form" class="card-body">
-        <label for="username-signup" class="form-label">Username</label>
+        <label for="username-signup" class="form-label">Email</label>
         <input id="username-signup" type="text" autocomplete="username" class="form-input" />
 
 
