--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
   <h3 class="card-header">Login</h3>
   <form id="login-form" class="card-body">
-        <label class="form-label" for="username-login">Username</label>
+        <label class="form-label" for="username-login">Email</label>
         <input  id="username-login" type="text" autocomplete="username" autofocus="true" class="form-input" />
 
         <label class="form-label" for="password-login">Password</label>
