added list on nav bar and images to display in handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,7 +16,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="/public/assets/thumbs.png" alt="thumb army background img 1"></div>
+    <div class="parallax"><img src="./assets/thumbs.png" alt="thumb army background img 1"></div>
   </div>
 
 
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="/public/assets/spilledpopcorn.png" alt="popcorn red background img 2"></div>
+    <div class="parallax"><img src="./assets/spilledpopcorn.png" alt="popcorn red background img 2"></div>
   </div>
 
   <div class="container">
@@ -59,12 +59,8 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="/public/assets/redseats.png" alt="movie theater seats background img 3"></div>
+    <div class="parallax"><img src="./assets/redseats.png" alt="movie theater seats background img 3"></div>
   </div>
-
-    <main>
-        {{{ body }}}
-    </main>
 
  </body>
 </html>
