javascript logic to show 2 different movies to vote on

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,66 +1,85 @@
 <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">
-          Like films you've watched. <br> 
-          See what's popular. <br>
-          Save those you want to see.</h1>
-          <!-- <div class="row center">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <br><br>
+      <h1 class="header center teal-text text-lighten-2">
+        Like films you've watched. <br>
+        See what's popular. <br>
+        Save those you want to see.</h1>
+      <!-- <div class="row center">
             <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
           </div> -->
-        <div class="row center">
-          <a href="http:" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Sign up - It's Free!</a>
-        </div>
-        <br><br>
-
+      <div class="row center">
+        <a href="http:" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Sign up - It's
+          Free!</a>
       </div>
-    </div>
-    <div class="parallax"><img src="./assets/thumbs.png" alt="thumb army background img 1"></div>
-  </div>
-
-
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 dark">
-            Add a review. Add your favorites to your own list.<br>
-            Enter Comments placecard here.
-          </h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="./assets/spilledpopcorn.png" alt="popcorn red background img 2"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row" >
-        <div class="col s12 center" id="poplist">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Popular List</h4>
-          <p class="left-align light">Enter list of populated movies tab here</p>
-        </div>
-      </div>
+      <br><br>
 
     </div>
   </div>
+  <div class="parallax"><img src="./assets/thumbs.png" alt="thumb army background img 1"></div>
+</div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">modern responsive front-end framework based on Material Design</h5>
-        </div>
+
+
+<div class="parallax-container valign-wrapper">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <div class="row center">
+        <h5 class="header col s12 dark">
+          Add a review. Add your favorites to your own list.<br>
+          Enter Comments placecard here.
+        </h5>
       </div>
     </div>
-    <div class="parallax"><img src="./assets/redseats.png" alt="movie theater seats background img 3"></div>
   </div>
+  <div class="parallax"><img src="./assets/spilledpopcorn.png" alt="popcorn red background img 2"></div>
+</div>
 
- </body>
+<div class="container">
+  <div class="section">
+
+    <div class="row">
+      <div class="col s12 center" id="poplist">
+        <h3><i class="mdi-content-send brown-text"></i></h3>
+        <h4>Popular List</h4>
+        <section>
+          <div id="popular-movies">
+            <!-- first movie -->
+            <p id="popular1"></p>
+            <img src="" alt="random movie poster" id="popular-poster1">
+            <!-- second movie -->
+            <p id="popular2"></p>
+            <img src="" alt="random movie poster" id="popular-poster2">
+            <!-- third movie -->
+            <p id="popular3"></p>
+            <img src="" alt="random movie poster" id="popular-poster3">
+            <!-- fourth movie -->
+            <p id="popular4"></p>
+            <img src="" alt="random movie poster" id="popular-poster4">
+            <!-- fifth movie -->
+            <p id="popular5"></p>
+            <img src="" alt="random movie poster" id="popular-poster5">
+          </div>
+        </section>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="parallax-container valign-wrapper">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <div class="row center">
+        <h5 class="header col s12 light">modern responsive front-end framework based on Material Design</h5>
+      </div>
+    </div>
+  </div>
+  <div class="parallax"><img src="./assets/redseats.png" alt="movie theater seats background img 3"></div>
+</div>
+</body>
+
 </html>
