--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -90,5 +90,7 @@
     <script src="/javascript/logout.js"></script>
   {{/if}}
 
+
+<script src="../../public/javascript/show-popular-movies.js"><{{!}}/script>
   </body>
 </html>
