movies displaying in ToT

--- a/views/lists.handlebars
+++ b/views/lists.handlebars
@@ -3,14 +3,14 @@
         <table>
         <thead>
             <tr>
-                <th name ='list-title'
+                <th id='list-title'
                 value='{{favorite.listTitle}}'>Liked Movies</th>
             </tr>
         </thead>
         
         <tbody>
             <tr>
-                <td name = 'title' value='{{favorite.title}}'>Zoolander</td>
+                <td id='title' for='movie-title'>Zoolander</td>
             </tr>
             <tr>
                 <td>etc...</td>
