--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -11,11 +11,16 @@
                 <img class="activator" src="images/office.jpg">
                 </div>
                 <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Movie Title<i class="material-icons right">more_vert</i></span>
+                    {{#each displayed}}
+                        <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
+                        {{title}}
+                    {{/each}}
+                <span class="card-title activator grey-text text-darken-4"><i class="material-icons right">more_vert</i></span>
                 <p>
                     <button onclick="addToList()" type="button" name="button" id="addButton">Love❤️</button>
                     <a href="#">Not a fan🚫</a>
                 </p>
+                    
                 </div>
 
                 <div class="card-reveal">
