--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -1,59 +1,65 @@
 <!-- TO BE USED IN THE ACUTAL DASHBOARD PAGE -->
-  <div class="container">
+<div class="container">
     <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
+        <!--   Icon Section   -->
+        <div class="row">
+            <div class="col s12 m4">
 
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                {{!-- <img class="activator" src="images/office.jpg"> --}}
-                </div>
-                <div class="card-content">
-                    {{#each displayed}}
-                    {{#if @first}}
-                        <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
-                        {{title}}
-                        {{/if}}
-                    {{/each}}
-                <span class="card-title activator grey-text text-darken-4"><i class="material-icons right">more_vert</i></span>
-                <p>
-                    <button onclick="addToList()" type="button" name="button" id="addButton">Love❤️</button>
-                    <a href="#">Not a fan🚫</a>
-                </p>
-                    
-                </div>
-
-                <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Movie Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this movie that is only revealed once clicked on.</p>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                {{!-- <img class="activator" src="images/office.jpg"> --}}
-                </div>
-                <div class="card-content">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        {{!-- <img class="activator" src="images/office.jpg"> --}}
+                    </div>
+                    <div class="card-content">
                         {{#each displayed}}
-                    {{#if @last}}
-                        <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
+                        {{#if @first}}
                         {{title}}
+                        <br>
+                        <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
                         {{/if}}
-                    {{/each}}
-                <span class="card-title activator grey-text text-darken-4"><i class="material-icons right">more_vert</i></span>
-                <p>
-                    <a href="#">Love❤️ </a>
-                    <a href="#">Not a fan🚫</a>
-                </p>
+                        {{/each}}
+                        <span class="card-title activator grey-text text-darken-4"><i
+                                class="material-icons right">more_vert</i></span>
+                        <p>
+                            <button onclick="addToList()" type="button" name="button" id="addButton">Love❤️</button>
+                            <a href="#">Not a fan🚫</a>
+                        </p>
+
+                    </div>
+
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Movie Title<i
+                                class="material-icons right">close</i></span>
+                        <p>Here is some more information about this movie that is only revealed once clicked on.</p>
+                    </div>
                 </div>
 
-                <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Movie Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this movie that is only revealed once clicked on.</p>
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        {{!-- <img class="activator" src="images/office.jpg"> --}}
+                    </div>
+                    <div class="card-content">
+                        {{#each displayed}}
+                        {{#if @last}}
+                        {{title}}
+                        <br>
+                        <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
+                        {{/if}}
+                        {{/each}}
+                        <span class="card-title activator grey-text text-darken-4"><i
+                                class="material-icons right">more_vert</i></span>
+                        <p>
+                            <a href="#">Love❤️ </a>
+                            <a href="#">Not a fan🚫</a>
+                        </p>
+                    </div>
+
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Movie Title<i
+                                class="material-icons right">close</i></span>
+                        <p>Here is some more information about this movie that is only revealed once clicked on.</p>
+                    </div>
                 </div>
+
             </div>
-
-    </div>
-</div> 
+        </div>
