--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -4,9 +4,9 @@
 
         <!--   Icon Section   -->
         <div class="row">
-            <div class="col s12 m4">
+            
 
-                <div class="card">
+                <div class="card col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         {{!-- <img class="activator" src="images/office.jpg"> --}}
                     </div>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         {{!-- <img class="activator" src="images/office.jpg"> --}}
                     </div>
@@ -61,5 +61,4 @@
                     </div>
                 </div>
 
-            </div>
         </div>
