--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">
+        <h1 class="title center teal-text text-lighten-2">
           Like films you've watched. <br> 
           See what's popular. <br>
           Save those you want to see.</h1>
@@ -26,28 +26,13 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 dark">
-            Add a review. Add your favorites to your own list.<br>
-            Enter Comments placecard here.
-          </h5>
+          <h1 class="header col s12 dark">
+            Popular List
+          </h1>
         </div>
       </div>
     </div>
     <div class="parallax"><img src="./assets/spilledpopcorn.png" alt="popcorn red background img 2"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row" >
-        <div class="col s12 center" id="poplist">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Popular List</h4>
-          <p class="left-align light">Enter list of populated movies tab here</p>
-        </div>
-      </div>
-
-    </div>
   </div>
 
 
@@ -55,7 +40,8 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">modern responsive front-end framework based on Material Design</h5>
+          <h1 class="header col s12 light">Simple as one click. <br> Add a review. <br> Your own list of likes.<br>
+            </h1>
         </div>
       </div>
     </div>
