--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -20,10 +20,9 @@
                         {{/each}}
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
-                        <p>
-                            <button onclick="addToList()" type="button" name="button" id="addButton">Love❤️</button>
-                            <a href="#">Not a fan🚫</a>
-                        </p>
+                            <button type="button" class="likeBtn">Love❤️</button>
+                            <button type="button" class="dislikeBtn">Not a fan🚫</button>
+                            <button type="button" class="watchBtn">Add to watch list</button>
 
                     </div>
 
@@ -48,10 +47,9 @@
                         {{/each}}
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
-                        <p>
-                            <a href="#">Love❤️ </a>
-                            <a href="#">Not a fan🚫</a>
-                        </p>
+                            <button type="button" class="likeBtn">Love❤️</button>
+                            <button type="button" class="dislikeBtn">Not a fan🚫</button>
+                            <button type="button" class="watchBtn">Add to watch list</button>
                     </div>
 
                     <div class="card-reveal">
