--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,11 +64,11 @@
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">GitHub 1</a></li>
-            <li><a class="white-text" href="#!">GitHub 2</a></li>
-            <li><a class="white-text" href="#!">GitHub 3</a></li>
-            <li><a class="white-text" href="#!">GitHub 4</a></li>
-            <li><a class="white-text" href="#!">GitHub 5</a></li>
+            <li><a class="white-text" href="https://github.com/GRech17">GitHub 1: Gabriel Reches </a></li>
+            <li><a class="white-text" href="https://github.com/jchavezval">GitHub 2: Juan Chavez</a></li>
+            <li><a class="white-text" href="https://github.com/cleanjenn">GitHub 3: Jennifer Gomez</a></li>
+            <li><a class="white-text" href="https://github.com/emilychhun?tab=repositories">GitHub 4: Emily Chhun</a></li>
+            <li><a class="white-text" href="https://github.com/davevebber">GitHub 5: Dave Vebber</a></li>
           </ul>
         </div>
       </div>
