--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -4750,6 +4750,23 @@ small {
   border-radius: 2px;
 }
 
+.card-login {
+  position: relative;
+  margin: 0.5rem 0 1rem 0;
+  padding: 300px;
+  text-align: center;
+  background-color: #fff;
+  -webkit-transition: -webkit-box-shadow .25s;
+  transition: -webkit-box-shadow .25s;
+  transition: box-shadow .25s;
+  transition: box-shadow .25s, -webkit-box-shadow .25s;
+  border-radius: 2px;
+}
+
+.form-input {
+  text-align: center;
+}
+
 .card .card-title {
   font-size: 24px;
   font-weight: 300;
