--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -5,7 +5,7 @@
         <!--   Icon Section   -->
         <div class="row">
             
-
+            <div class="card col s12">
                 <div class="card col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         {{!-- <img class="activator" src="images/office.jpg"> --}}
@@ -20,9 +20,9 @@
                         {{/each}}
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
-                            <button type="button" class="likeBtn">Love❤️</button>
-                            <button type="button" class="dislikeBtn">Not a fan🚫</button>
-                            <button type="button" class="watchBtn">Add to watch list</button>
+                            <button type="button" class="likeBtn">Like👍 </button>
+                            <button type="button" class="dislikeBtn">Not a fan👎 </button>
+                            <button type="button" class="watchBtn">Add to watch list✅</button>
 
                     </div>
 
@@ -58,5 +58,5 @@
                         <p>Here is some more information about this movie that is only revealed once clicked on.</p>
                     </div>
                 </div>
-
+            </div>
         </div>
