--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card-login">
   <h3 class="card-header">Login</h3>
   <form id="login-form" class="card-body">
         <label class="form-label" for="username-login">Email</label>
