updated ToT display page

--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -47,9 +47,9 @@
                         {{/each}}
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
-                            <button type="button" class="likeBtn">Love❤️</button>
-                            <button type="button" class="dislikeBtn">Not a fan🚫</button>
-                            <button type="button" class="watchBtn">Add to watch list</button>
+                            <button type="button" class="likeBtn">Like👍</button>
+                            <button type="button" class="dislikeBtn">Not a fan👎</button>
+                            <button type="button" class="watchBtn">Add to watch list✅</button>
                     </div>
 
                     <div class="card-reveal">
