--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,7 +25,7 @@
     <h1 class="header col s12 dark">
       Popular List
     </h1>
-
+<div class="parallax"><img src="./assets/spilledpopcorn.png" alt="popcorn red background img 2">
 
 <div class="row">
   <div class="col s2">
@@ -57,6 +57,7 @@
 
 
   </div>
+</div>
 </div>
 </div>
 
