--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card-login">
     <h3 class="card-header">Sign Up</h3>
     <form id="signup-form" class="card-body">
         <label for="username-signup" class="form-label">Email</label>
