--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -3431,6 +3431,14 @@ table span.badge {
   width: 90%;
 }
 
+.movie-grid {
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 90%;
+  display: grid;
+  grid-template: repeat(4, 1fr) / 50px 100px;
+}
+
 @media only screen and (min-width: 601px) {
   .container {
     width: 85%;
