--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -16,13 +16,17 @@
                         {{title}}
                         <br>
                         <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
+                        <div class="is-pulled-right new-post-form">
+    
+                               <a href="single-post/{{id}}" type="submit">{{format_plural "comment"}}</a>
+                               </div>
                         {{/if}}
                         {{/each}}
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
                             <button type="button" class="likeBtn">Like👍 </button>
                             <button type="button" class="dislikeBtn">Not a fan👎 </button>
-                            <button type="button" class="watchBtn">Add to watch list✅</button>
+                                         
 
                     </div>
 
@@ -43,13 +47,17 @@
                         {{title}}
                         <br>
                         <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
+                        <div class="is-pulled-right new-post-form">
+    
+                               <a href="single-post/{{id}}" type="submit">{{format_plural "comment"}}</a>
+                               </div>
                         {{/if}}
                         {{/each}}
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
                             <button type="button" class="likeBtn">Like👍</button>
                             <button type="button" class="dislikeBtn">Not a fan👎</button>
-                            <button type="button" class="watchBtn">Add to watch list✅</button>
+                              
                     </div>
 
                     <div class="card-reveal">
@@ -60,3 +68,4 @@
                 </div>
             </div>
         </div>
+      
