--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -16,15 +16,23 @@
                         {{title}}
                         <br>
                         <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
-                        {{/if}}
-                        {{/each}}
+
+                        
+                       
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
                             <button type="button" class="likeBtn" id="increment">Like👍 </button>
                             <button type="button" class="dislikeBtn" id="decrement">Not a fan👎 </button>
                             <button type="button" class="watchBtn">Add to watch list✅</button>
+                            <button type="button" onClick="location.href ='comment/{{id}}'" class="commentBtn">Comments</button>
+
                         <h5>👍 : <span id="count">0</span></h5>
                         <h5>👎 : <span id="downcount">0</span></h5>
+                        {{/if}}
+                        {{/each}}
+
+
+
                         <script>
                         let count = 1;
                         let downcount = 0;
@@ -50,15 +58,20 @@
                         {{title}}
                         <br>
                         <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
-                        {{/if}}
-                        {{/each}}
+                        
                         <span class="card-title activator grey-text text-darken-4"><i
                                 class="material-icons right">more_vert</i></span>
                             <button type="button" class="likeBtn" id="increment2">Like👍 </button>
                             <button type="button" class="dislikeBtn" id="decrement2">Not a fan👎 </button>
                             <button type="button" class="watchBtn">Add to watch list✅</button>
+                            <button type="button" onClick="location.href ='comment/{{id}}'" class="commentBtn">Comments</button>
                         <h5>👍 : <span id="count2">0</span></h5>
                         <h5>👎 : <span id="downcount2">0</span></h5>
+                       {{/if}}
+                        {{/each}}
+
+
+
                         <script>
                         let count2 = 1;
                         let downcount2 = 0;
