--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<div class="card-login">
+<div class="card">
     <h3 class="card-header">Sign Up</h3>
     <form id="signup-form" class="card-body">
         <label for="username-signup" class="form-label">Email</label>
@@ -12,3 +12,4 @@
         <a class="login-link" href="/login">Or Login</a>
     </form>
 </div>
+<script src="/javascript/signup.js"></script>
