--- a/views/ToT.handlebars
+++ b/views/ToT.handlebars
@@ -13,7 +13,7 @@
                     <div class="card-content">
                         {{#each displayed}}
                         {{#if @first}}
-                        {{title}}
+                        <h1 id="movieOne">{{title}}</h1>
                         <br>
                         <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>   
                    
@@ -23,7 +23,7 @@
 
                             <button type="button" class="likeBtn" id="increment">Like👍 </button>
                             <button type="button" class="dislikeBtn" id="decrement">Not a fan👎 </button>
-                            <button type="button" class="watchBtn">Add to watch list✅</button>
+                            <button id="watchBtnOne" class="watchBtn" data-id={{title}}>Add to watch list✅</button>
                             <button type="button" onClick="location.href ='comment/{{id}}'" class="commentBtn">Comments</button>
 
                         <h5>👍 : <span id="count">0</span></h5>
@@ -56,7 +56,7 @@
                     <div class="card-content">
                         {{#each displayed}}
                         {{#if @last}}
-                        {{title}}
+                        <h1 id="movieTwo">{{title}}</h1>
                         <br>
                         <img src=https://www.themoviedb.org/t/p/w150_and_h225_bestv2/{{poster_path}}>
 
@@ -66,7 +66,7 @@
 
                             <button type="button" class="likeBtn" id="increment2">Like👍 </button>
                             <button type="button" class="dislikeBtn" id="decrement2">Not a fan👎 </button>
-                            <button type="button" class="watchBtn">Add to watch list✅</button>
+                            <button id="watchBtnTwo" type="button" class="watchBtn" data-id={{id}}>Add to watch list✅</button>
                             <button type="button" onClick="location.href ='comment/{{id}}'" class="commentBtn">Comments</button>
                         <h5>👍 : <span id="count2">0</span></h5>
                         <h5>👎 : <span id="downcount2">0</span></h5>
@@ -90,4 +90,4 @@
                 </div>
             </div>
         </div>
-      
+      <script src="/javascript/watchlist.js"></script>
